# egui_text_adventure

./: Cargo.toml
src/: game.rs  gui.rs  lib.rs  main.rs
